--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill"><span>API Integration</span> <i class="val">75%</i></span>
+              <span class="skill"><span>Debugging</span> <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
@@ -207,9 +207,9 @@
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>Debugging</span> <i class="val">100%</i></span>
+              <span class="skill"><span>UI Design</span> <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
@@ -319,14 +319,21 @@
             <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill"><span>Visual Basic</span> <i class="val">90%</i></span>
+              <span class="skill"><span>SQL</span> <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
               <span class="skill"><span>C</span> <i class="val">75%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>Visual Basic</span> <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -411,7 +418,7 @@ Object-Oriented Programming Practices, Data Structures & Algorithms, Database Te
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
         <p>
-          
+          Hover your cursor over an image and click on the link icon to visit the Github repository.
         </p>
       </div><!-- End Section Title -->
 
@@ -497,6 +504,18 @@ Object-Oriented Programming Practices, Data Structures & Algorithms, Database Te
                   <p>BST Student Record Management System CLI</p>
                   <a href="assets/img/portfolio/StudentRecordManagementSystem.jpg" title="StudentRecordManagementSystem.jpg" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://github.com/StanleyCJX/StudentRecordManagementSystem" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/FastFoodRestaurantDatabaseSystem.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>SQL</h4>
+                  <p>Fast Food Restaurant Database System</p>
+                  <a href="assets/img/portfolio/FastFoodRestaurantDatabaseSystem.jpg" title="FastFoodRestaurantDatabaseSystem.jpg" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://github.com/StanleyCJX/FastFoodRestaurantDatabaseSystem" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
