--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>Computer Science undergraduate from Universiti Tunku Abdul Rahman (UTAR) with a strong foundation in software development, object-oriented programming, and full-stack web development. Skilled in Java, Python, JavaScript, and database systems, with hands-on experience building projects like a stock management system with GUI in Java. Passionate about writing clean, efficient code and solving real-world problems through technology. Seeking an entry-level software developer role to apply technical skills and contribute to innovative solutions.</p>
+        <p>Computer Science undergraduate from Universiti Tunku Abdul Rahman (UTAR) with a strong foundation in software development, object-oriented programming, and database development. Skilled in Java, Python, JavaScript, and database systems, with hands-on experience building projects like a stock management system with GUI in Java. Passionate about writing clean, efficient code and solving real-world problems through technology. Seeking an entry-level software developer role to apply technical skills and contribute to innovative solutions.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
