--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h2>Stanley Chew Jun Xian</h2>
+        <h2>Stanley <br>Chew Jun Xian</h2>
         <p>I'm a <span class="typed" data-typed-items="Software Developer"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
